src/scss/header.scss
.header {
  background: var(--current-line);
  display: flex;
  justify-content: space-between;
  padding: 1rem;
  transition: box-shadow 0.3s ease;

  &:hover {
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
  }

  &__icons {
    display: flex;
    gap: 1.5rem;

    &-container {
      display: flex;
      align-items: center;
      column-gap: 0.5rem;
      padding: 0.5rem;
      background: transparent;
      outline: none;
      border: none;
      color: #fff;
      cursor: pointer;
      user-select: none;
      transition: 0.2s ease;
      border-radius: 10px;
      font-size: 1rem;

      &:hover {
        background-color: var(--bg);
      }

      p {
        margin: 0;
      }
    }
  }

  &__link {
    color: inherit;
    text-decoration: none;
  }

  &__iconMenu {
    background: transparent;
    border: none;
    outline: none;
    user-select: none;
    color: #fff;
    padding: 0.5rem 0.7rem;
    cursor: pointer;
    transition: 0.2s ease;
    border-radius: 10px;

    &:hover {
      background-color: var(--bg);
      color: var(--yellow);
    }
  }

  &__menu {
    display: block; /* should be: none */
    position: absolute;
    background: var(--bg);
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
    border-radius: 10px;
    top: 45px;
    width: 200px;
    transition: 0.2s ease;
    font-size: 0.9rem;

    &:hover {
      box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.7);
    }

    ul {
      list-style: none;
      margin: 0;
      padding: 0;


      li {
        padding: 0.8rem 1rem;
        transition: 0.2s ease;
        opacity: 0.7;
        border: 2px solid transparent;
        cursor: pointer;

        &:last-child {
          border-radius: 0 0 10px 10px;
        }

        &:first-child {
          border-radius: 10px 10px 0 0;
        }

        &:hover {
          border: 2px solid var(--foreground);
          opacity: 1;
        }
      }
    }

    &--container {
      position: relative;
    }
  }
}

